--- a/index.html
+++ b/index.html
@@ -1,5 +1,279 @@
 <html>
-    <body>
-        <h1>Kevin's Portfolio</h1>
-    </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- Site CSS -->
+  <link rel="stylesheet" href="css/style.css">
+  <!-- Responsive CSS -->
+  <link rel="stylesheet" href="css/responsive.css">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="css/custom.css">
+  <script src="js/modernizr.js"></script> <!-- Modernizr -->
+</head>
+
+<body>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <div class="container">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
+        Menu
+        <i class="fa fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav text-uppercase ml-auto">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger active" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+          </li>
+          <!--<li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+          </li>-->
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <section id="home" class="main-banner parallaxie bg">
+    <div class="heading">
+      <h1>Hi, I'm Kevin Carrier</h1>
+      <h3 class="cd-headline clip is-full-width">
+        <span>Professional Full Stack Web Developer and Scrum Master</span>
+      </h3>
+    </div>
+  </section>
+
+  <div id="about" class="section wb">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="message-box">
+            <h2>About</h2>
+            <p>Hi my name is Kevin Carrier and I am a professional full stack developer and scrum master from New
+              Jersey. I am passionate about helping make people's lives easier and more efficient by building technology
+              solutions.</p>
+            <p>I enjoy taking on difficult challenges and learning new technologies.</p>
+            <p>I recently received a Masters Degree in Computer Science from Rowan University.</p>
+            <p>Currently I am working in a Microsoft Stack architecture where I am building ASP.NET Core and ASP.NET
+              Framework web applications.
+            </p>
+          </div><!-- end messagebox -->
+        </div><!-- end col -->
+
+        <div class="col-md-6">
+          <div class="right-box-pro wow fadeIn">
+            <img src="images/about.jpg" alt="" class="img-fluid img-rounded">
+          </div><!-- end media -->
+        </div><!-- end col -->
+      </div><!-- end row -->
+    </div><!-- end container -->
+  </div><!-- end section -->
+  <div id="skills" class="section lb">
+    <div class="container">
+      <div class="section-title text-center">
+        <h3>Skills</h3>
+      </div><!-- end title -->
+
+      <div class="row">
+        <div class="col-md-3">
+          <img src="https://img.icons8.com/ios-filled/100/000000/c-sharp-logo.png">
+        </div>
+        <div class="col-md-3">
+          <img src="https://img.icons8.com/ios-filled/100/000000/javascript.png">
+        </div>
+        <div class="col-md-3">
+          <img src="https://img.icons8.com/ios-filled/100/000000/html.png">
+        </div>
+        <div class="col-md-3">
+          <img src="https://img.icons8.com/ios-filled/100/000000/css.png">
+        </div>
+        <div class="col-md-3">
+          <img src="https://img.icons8.com/ios-filled/100/000000/java-files.png">
+        </div>
+        <div class="col-md-3">
+          <img src="https://img.icons8.com/ios-filled/100/000000/sql.png">
+        </div>
+        <div class="col-md-3">
+          <img src="https://img.icons8.com/ios/100/000000/mysql-logo.png">
+        </div>
+        <div class="col-md-3">
+          <img src="https://img.icons8.com/ios-filled/100/000000/angularjs.png">
+        </div>
+        <div class="col-md-3">
+          <img src="https://img.icons8.com/ios-filled/100/000000/ms-share-point.png">
+        </div>
+        <div class="col-md-3">
+          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+width="96" height="96"
+viewBox="0 0 172 172"
+style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#000000"><path d="M164.83333,143.33333l-59.78075,-104.447l-23.32392,46.97033l41.06142,47.58667l-76.20675,8.65375zM46.913,65.15217l-39.74633,67.0585l33.83383,-3.40058l59.45108,-108.46392z"></path></g></g></svg>
+        </div>
+        <div class="col-md-3">
+          <img src="https://img.icons8.com/material/96/000000/amazon-web-services.png">
+        </div>
+        <div class="col-md-3">
+          <img src="https://img.icons8.com/ios-filled/100/000000/google-cloud-platform.png">
+        </div>
+      </div><!-- end row -->
+    </div><!-- end container -->
+  </div><!-- end section -->
+
+  <!--<div id="projects" class="section lb">
+    <div class="container">
+      <div class="section-title text-center">
+        <h3>Projects</h3>
+        <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus.</p>
+      </div>
+
+      <div class="gallery-menu row">
+        <div class="col-md-12">
+          <div class="button-group filter-button-group text-center">
+            <button class="active" data-filter="*">All</button>
+            <button data-filter=".gal_a">Web Development</button>
+            <button data-filter=".gal_b">Creative Design</button>
+            <button data-filter=".gal_c">Graphic Design</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="gallery-list row">
+        <div class="col-md-4 col-sm-6 gallery-grid gal_a gal_b">
+          <div class="gallery-single fix">
+            <img src="uploads/gallery_img-01.jpg" class="img-fluid" alt="Image">
+            <div class="img-overlay">
+              <a href="uploads/gallery_img-01.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i
+                  class="fa fa-picture-o"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-sm-6 gallery-grid gal_c gal_b">
+          <div class="gallery-single fix">
+            <img src="uploads/gallery_img-02.jpg" class="img-fluid" alt="Image">
+            <div class="img-overlay">
+              <a href="uploads/gallery_img-02.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i
+                  class="fa fa-picture-o"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-sm-6 gallery-grid gal_a gal_c">
+          <div class="gallery-single fix">
+            <img src="uploads/gallery_img-03.jpg" class="img-fluid" alt="Image">
+            <div class="img-overlay">
+              <a href="uploads/gallery_img-03.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i
+                  class="fa fa-picture-o"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-sm-6 gallery-grid gal_b gal_a">
+          <div class="gallery-single fix">
+            <img src="uploads/gallery_img-04.jpg" class="img-fluid" alt="Image">
+            <div class="img-overlay">
+              <a href="uploads/gallery_img-04.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i
+                  class="fa fa-picture-o"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-sm-6 gallery-grid gal_a gal_c">
+          <div class="gallery-single fix">
+            <img src="uploads/gallery_img-05.jpg" class="img-fluid" alt="Image">
+            <div class="img-overlay">
+              <a href="uploads/gallery_img-05.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i
+                  class="fa fa-picture-o"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-sm-6 gallery-grid gal_c gal_a">
+          <div class="gallery-single fix">
+            <img src="uploads/gallery_img-06.jpg" class="img-fluid" alt="Image">
+            <div class="img-overlay">
+              <a href="uploads/gallery_img-06.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i
+                  class="fa fa-picture-o"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  <div id="contact" class="section db">
+    <div class="container">
+        <div class="section-title text-center">
+            <h3>Contact</h3>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="contact_form">
+                    <div id="message"></div>
+                    <form id="contactForm" name="sentMessage" novalidate="novalidate">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <input class="form-control" id="name" type="text" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name.">
+                <p class="help-block text-danger"></p>
+              </div>
+              <div class="form-group">
+                <input class="form-control" id="email" type="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email address.">
+                <p class="help-block text-danger"></p>
+              </div>
+              <div class="form-group">
+                <input class="form-control" id="phone" type="tel" placeholder="Your Phone" required="required" data-validation-required-message="Please enter your phone number.">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <textarea class="form-control" id="message" placeholder="Your Message" required="required" data-validation-required-message="Please enter a message."></textarea>
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="clearfix"></div>
+            <div class="col-lg-12 text-center">
+              <div id="success"></div>
+              <button id="sendMessageButton" class="sim-btn hvr-bounce-to-top" type="submit">Send Message</button>
+            </div>
+          </div>
+        </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>-->
+
+
+  <!-- ALL JS FILES -->
+  <script src="js/all.js"></script>
+  <!-- Camera Slider -->
+  <script src="js/jquery.mobile.customized.min.js"></script>
+  <script src="js/jquery.easing.1.3.js"></script>
+  <script src="js/parallaxie.js"></script>
+  <script src="js/headline.js"></script>
+  <!-- Contact form JavaScript -->
+  <script src="js/jqBootstrapValidation.js"></script>
+  <script src="js/contact_me.js"></script>
+  <!-- ALL PLUGINS -->
+  <script src="js/custom.js"></script>
+  <script src="js/jquery.vide.js"></script>
+</body>
+
 </html>
