--- a/index.html
+++ b/index.html
@@ -90,43 +90,43 @@
       </div><!-- end title -->
 
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-4">
           <img src="https://img.icons8.com/ios-filled/100/000000/c-sharp-logo.png">
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-4">
           <img src="https://img.icons8.com/ios-filled/100/000000/javascript.png">
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-4">
           <img src="https://img.icons8.com/ios-filled/100/000000/html.png">
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-4">
           <img src="https://img.icons8.com/ios-filled/100/000000/css.png">
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-4">
           <img src="https://img.icons8.com/ios-filled/100/000000/java-files.png">
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-4">
           <img src="https://img.icons8.com/ios-filled/100/000000/sql.png">
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-4">
           <img src="https://img.icons8.com/ios/100/000000/mysql-logo.png">
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-4">
           <img src="https://img.icons8.com/ios-filled/100/000000/angularjs.png">
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-4">
           <img src="https://img.icons8.com/ios-filled/100/000000/ms-share-point.png">
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-4">
           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
 width="96" height="96"
 viewBox="0 0 172 172"
 style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#000000"><path d="M164.83333,143.33333l-59.78075,-104.447l-23.32392,46.97033l41.06142,47.58667l-76.20675,8.65375zM46.913,65.15217l-39.74633,67.0585l33.83383,-3.40058l59.45108,-108.46392z"></path></g></g></svg>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-4">
           <img src="https://img.icons8.com/material/96/000000/amazon-web-services.png">
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-4">
           <img src="https://img.icons8.com/ios-filled/100/000000/google-cloud-platform.png">
         </div>
       </div><!-- end row -->
